# raylib-cmake-template

./: .gitmodules  CMakeLists.txt  README.md
include/: agui.h
src/: main.cpp
